Correct inappropriate scrollbars after importing graphs into a diagram

When importing graphs into a class or sequence diagram, the extent of the
scene was too small, so that it was not possible to scroll over the entire
elements.

umbrello/diagram_utils.cpp:
- in importGraph() update scene rect

umbrello/umlscene.{h,cpp}:
- add static constant s_sceneBorder
- add method updateSceneRect()

BUG:480019
FIXED-IN: 2.39.2 (KDE releases 24.02.02)